--- a/aula13js/cadastro.html
+++ b/aula13js/cadastro.html
@@ -11,15 +11,17 @@
 <body>
     <div id="caixa">
         <span class="material-symbols-outlined">
-            login
-        </span>
-        <h1>LOGIN</h1>
+            person_add
+            </span>
+        <h1>CADASTRO</h1>
         <form>
-            <input type="text" placeholder="Usuário" id="inputUsuario" class="inputForm">
-            <input type="password" placeholder="Senha" id="inputSenha" class="inputForm">
-            <input type="submit" value="Entrar" id="inputEntrar" class="inputBotao" onclick="logar()">
+            <input type="text" placeholder="Usuário" id="inputUsuarioNovo" class="inputForm">
+            <input type="email" placeholder="Email" id="inputEmailNovo" class="inputForm">
+            <input type="password" placeholder="Senha" id="inputSenhaNovo" class="inputForm">
+            <input type="password" placeholder="Confirme senha" id="inputSenhaConfirme" class="inputForm">
+            <input type="submit" value="Cadastrar" id="inputCadastrar" class="inputBotao" onclick="cadastrar()">
         </form>
-        <p>Não possui conta? <a href="./cadastro.html">Cadastre-se</a></p>
+        <p>Já possui conta? <a href="./index.html">Login</a></p>
     </div>
 </body>
     <!-- <script>
