--- a/aula13js/home.html
+++ b/aula13js/home.html
@@ -10,16 +10,13 @@
 </head>
 <body>
     <div id="caixa">
-        <span class="material-symbols-outlined">
-            login
-        </span>
-        <h1>LOGIN</h1>
-        <form>
-            <input type="text" placeholder="Usuário" id="inputUsuario" class="inputForm">
-            <input type="password" placeholder="Senha" id="inputSenha" class="inputForm">
-            <input type="submit" value="Entrar" id="inputEntrar" class="inputBotao" onclick="logar()">
-        </form>
-        <p>Não possui conta? <a href="./cadastro.html">Cadastre-se</a></p>
+        <h3>BEM-VINDO A INCRÍVEL PÁGINA QUE EU FIZ</h3>
+        <h1>HOME</h1>
+        <a href="./index.html">
+            <span class="material-symbols-outlined">
+                logout
+            </span>
+        </a>
     </div>
 </body>
     <!-- <script>
